2002-09-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/global.h, src/rbglib.h: Move StringValue, StringValuePtr 
	to src/rbglib.h(Because it'll be used by other Ruby-GNOME libraries).
	Add RVAL2CSTR, CSTR2RVAL macro.

2002-09-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Append -fnative-struct to $CFLAGS when G_OS_WIN32 is defined

2002-09-13  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgobject.h, src/rbgobj_object.c: Rename RBGOBJ_INITIALIZE to G_INITIALIZE.
	* src/rbgobject.h: Add G_RELATIVE, G_RELATIVE2, G_REMOVE_RELATIVE.

2002-09-13  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbobjmanager.[ch]: remove files.
	* src/rbglib.[ch]: remove Init_objmanager().

2002-09-03  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c: implement GLib::Object#signal_emit_by_name

2002-09-01  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_signal.c: fix GLib::Object#signal_emit.
	* src/rbgobj_signal.c: implement GLib::Object.signal_lookup and 
	GLib::Object.signal_list
	* src/rbgobj_signal.c: implement GLib::Object.signal_new.
	This is an experimental interface.
	* src/rbgobj_value.c (rbgobj_gvalue_to_rvalue, rbgobj_rvalue_to_gvalue): 
	fix error messsage and use g_warning().
	* src/utils_int64.c: use 0xffffffffL instead of G_MAXUINT
	* src/utils_int64.c, src/global.h, src/rbgobj_paramspecs.c,
	src/rbgobj_value.c: change prefix of int64 functions from 'rbgobj_' to
	'rbglib_'.
	* src/*.[ch]: add 'indent-tabs-mode: nil' to header 

2002-08-29  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgobj_boxed.c: Add GLib::Boxed.new, GLib::Boxed#allocate.

2002-08-20  Masao Mutoh <mutoh@highway.ne.jp>

	* src/rbgobj_boxed.c: Add rbgobj_boxed_initialize(), rbgobj_boxed_create().
	Modify rbgobj_boxed_get().

	* src/rbgobject.[ch]: Support Boxed type in rbgobj_create_object(), 
	rbgobj_initialize_object().

2002-08-20  Masahiro Sakai  <s01397ms@sfc.keio.ac.jp>

	* src/utils_int64.c: rb_global_variable(&max_PRUint32)